tests/errors/semantic_error_1.fm
PASTA_RAIZ "/home/usuario/documentos";
REGRA SE $NOME MAIOR_QUE 100 ENTAO EXCLUIR; // $NOME é STRING, MAIOR_QUE espera NUMERO
